# FABE

./: .gitignore  FABE_TECHNICAL_REPORT.md  README.md  TRAINING_DEEP_DIVE_zh.md
IST/: README_style_backdoor.md  style_backdoor_dataset.py  style_replace.py  transfer.py  (+3 more)
inference/: README.md  batch_inference.py  pyproject.toml  requirements.txt  run_batch_infer.py  test_auto_template.py
inference/examples/: -1.1_test.jsonl  -3.1_test.jsonl  adv_test.jsonl  auto_template_test.jsonl  config.yaml  sample.jsonl
inference/examples/prompts/: ds.j2  refactor_python.j2
inference/llm_infer/: __init__.py  cli.py  client.py  dataset_io.py  template.py
inference/outputs/: preview.jsonl  preview2.jsonl
inference/outputs/auto_template_off/: auto_template_test.jsonl
inference/outputs/echo-local/: sample.jsonl
inference/outputs/modelscope-_home_nfs_share-yjy_dachuang2025_defense_model_pro-deepseek-clone-detect_merged_epoch0/: -3.1_test.jsonl
inference/outputs/modelscope-_home_nfs_share-yjy_dachuang2025_models_deepseek-coder-6.7b-instruct/: -3.1_test.jsonl
inference/scripts/: run_infer.sh  run_vllm.sh
inference/sh/: ab_auto_template.sh  run_infer.sh
inference/sh/cache/: user_config.yaml
inference/src/fabe_infer/: cli.py  config.py  runner.py
inference/src/fabe_infer/pipeline/: cache.py  executor.py  postprocess.py
inference/src/fabe_infer/prompts/: templates.py
inference/src/fabe_inference.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
inference/templates/: code_docstring.yaml  code_refactor.yaml  code_security_cleanup.yaml
(+100 files in other folders)
