[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fabe-inference"
version = "0.1.0"
description = "Batch LLM inference for dataset code transformation"
authors = [{ name = "Your Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "jinja2>=3.1",
  "httpx>=0.27",
  "tenacity>=8.2",
  "tqdm>=4.66",
  "orjson>=3.10",
]

[project.optional-dependencies]
openai = ["openai>=1.33"]

[project.scripts]
fabe-infer = "fabe_infer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
